tests/fixtures/negative/empty-blocks/EmptyClassBlock.kt
package fixtures.negative.emptyblocks

class Foo {
    val x = 1
}
